--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230725193031">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230725204520">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,9 +48,10 @@
 							</p>
 						</div>
 					</div>
-					<div class="main__image">
+					<div class="main__image" data-watch>
 						<img src="img/sections/main/Marketing_consulting-amico.svg" alt="Marketing consulting amico" />
 					</div>
+
 				</div>
 			</section>
 
@@ -256,7 +257,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20230725193031"></script>
+	<script src="js/app.min.js?_v=20230725204520"></script>
 </body>
 
 </html>
