--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230725204520">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230725205232">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,6 @@
 					<div class="main__image" data-watch>
 						<img src="img/sections/main/Marketing_consulting-amico.svg" alt="Marketing consulting amico" />
 					</div>
-
 				</div>
 			</section>
 
@@ -137,7 +136,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="partners__image">
+					<div class="partners__image" data-watch>
 						<img data-src="img/sections/partners/Business_deal-amico.svg" alt="Our exclusive partners" />
 					</div>
 				</div>
@@ -207,8 +206,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="services__image">
-						<img data-src="img/sections/services/Generating_new leads-amico.svg" alt="Marketing consulting amico" />
+					<div class="services__image" data-watch>
+						<img data-src="img/sections/services/Generating_new_leads-amico.svg" alt="Marketing consulting amico" />
 					</div>
 				</div>
 			</section>
@@ -257,7 +256,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20230725204520"></script>
+	<script src="js/app.min.js?_v=20230725205232"></script>
 </body>
 
 </html>
