--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230725212810">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230726121031">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
 				</div>
 			</section>
 
-			<section class="page__trafic trafic">
+			<section class="page__trafic trafic" data-watch>
 				<div class="trafic__purple trafic-purple">
 					<div class="trafic-purple__slider swiper">
 						<div class="trafic-purple__wrapper swiper-wrapper">
@@ -256,7 +256,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20230725212810"></script>
+	<script src="js/app.min.js?_v=20230726121031"></script>
 </body>
 
 </html>
