--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230726121031">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230726122207">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -240,13 +240,13 @@
 					</ul>
 				</nav>
 
-				<ul class="footer__social social-footer">
+				<div class="footer__social social-footer">
 					<a href="#" class="social-footer__item social-footer__item_circle">
 						<img src="img/footer/social/s-facebook.svg" alt="Facebook" />
 					</a>
 					<a href="#" class="social-footer__item social-footer__item_square"><img src="img/footer/social/s-linkedin.svg" alt="LinkedIn" /></a>
 					<a href="#" class="social-footer__item social-footer__item_circle"><img src="img/footer/social/s-instagram.svg" alt="Instagram" /></a>
-				</ul>
+				</div>
 
 				<div class="footer__contact-us contact-us">
 					<h3 class="contact-us__title">Contact us</h3>
@@ -256,7 +256,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20230726121031"></script>
+	<script src="js/app.min.js?_v=20230726122207"></script>
 </body>
 
 </html>
